[package]
name = "voice-fem-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-visualizer = "0.4.0"
clap = { version = "4.5.1", features = ["derive"]}
cpal = "0.15.2"
spectrum-analyzer = "1.5.0"
